--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
 		"laravel/framework": "^9.0",
 		"laravel/helpers": "^1.1",
 		"laravel/horizon": "^5.0",
+		"laravel/octane": "^1.3",
 		"laravel/passport": "^10.0",
 		"laravel/tinker": "^2.0",
 		"laravel/ui": "^2.0|^3.4",
@@ -38,6 +39,7 @@
 		"predis/predis": "^1.1",
 		"spatie/laravel-backup": "^8.0.0",
 		"spatie/laravel-image-optimizer": "^1.7",
+		"spiral/roadrunner": "^2.8.2",
 		"stevebauman/purify": "4.0.*",
 		"symfony/http-client": "^6.1",
 		"symfony/http-kernel": "^6.0.0",
